# student_registry_server

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: mod.rs  registry_handler.rs
src/routes/: mod.rs
src/schema/: entity.rs  grade.rs  mod.rs  registry.rs  role.rs  sex.rs
src/utils/: util.rs
storage/: storage.json
